--- a/style.css
+++ b/style.css
@@ -18,23 +18,21 @@ body {
     background-position: top;
     background-size: cover;
     background-attachment: fixed;
-    overflow: hidden;
-    transition: opacity 0.5s ease-out, transform 0.8s ease-out;
 }
 
-/* Animación de salida cuando se hace clic en abrir */
-body.opening {
-    animation: zoomOut 2s ease-out forwards;
+body.opening{
+    animation: zoom 3s 2s ease-out forwards;
 }
 
-@keyframes zoomOut {
-    0% {
-        opacity: 1;
-        transform: scale(1);
+@keyframes zoom {
+    0%{
+        background-size: 100%;
     }
-    100% {
-        opacity: 0;
-        transform: scale(1.3);
+
+
+
+    100%{
+        background-size: 200%;
     }
 }
 
@@ -64,7 +62,7 @@ body.opening {
 }
 
 body.opening .div1 {
-    animation: ribbonSlideOut 1.5s ease-out forwards;
+    animation: ribbonSlideOut 1.5s 1S ease-out forwards;
 }
 
 @keyframes ribbonSlideOut {
@@ -94,16 +92,18 @@ body.opening .div1 {
 }
 
 body.opening .div2 {
-    animation: ribbonSlideOut2 1.5s ease-out forwards;
+    animation: ribbonSlideOut2 2s ease-out forwards;
 }
 
 @keyframes ribbonSlideOut2 {
+
+    /* El error estaba en que transladaba el eje Y en vez del X */
     0% {
-        transform: rotate(85deg) translateY(0);
+        transform: rotate(85deg) translateX(0);
         opacity: 1;
     }
     100% {
-        transform: rotate(85deg) translateY(-150%);
+        transform: rotate(85deg) translateX(-150%);
         opacity: 0;
     }
 }
@@ -169,10 +169,7 @@ body.opening a {
         opacity: 0;
         transform: scale(0);
     }
-}
-
-a:link,
-a:visited {
+ {
     color: rgb(43, 98, 215);
 }
 
@@ -194,6 +191,14 @@ a:active {
     75% {
         transform: scale(0.95);
         box-shadow: 1px 1px 45px white;
+    }
+
+    50% {
+        transform: scale(1.05);
+        box-shadow: 1px 1px 30px white;
+    }
+}
+box-shadow: 1px 1px 45px white;
     }
 
     50% {
